# derive-where

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml  taplo.toml
.config/: spellcheck.toml  topic.dic
.github/workflows/: audit.yml  format.yml  lint.yml  publish.yml  spellcheck.yml  test.yml  validate.yml
crate_/: Cargo.toml
crate_/src/: lib.rs
ensure-no-std/: Cargo.toml
ensure-no-std/src/: lib.rs
non-msrv-tests/: Cargo.toml
non-msrv-tests/src/: lib.rs
non-msrv-tests/tests/: tests.rs  util.rs  zeroize.rs
non-msrv-tests/tests/ui/: comma.rs  comma.stderr  default.rs  default.stderr  duplicate_default.rs  duplicate_default.stderr  duplicate_option.rs  duplicate_option.stderr  empty.rs  empty.stderr  field_option.rs  field_option.stderr  field_option_syntax.rs  field_option_syntax.stderr  generic.rs  generic.stderr  invalid_trait.stderr  item.rs  item.stderr  item_option.rs  item_option.stderr  item_option_syntax.rs  item_option_syntax.stderr  item_skip.rs  item_skip.stderr  missing_comma.rs  missing_comma.stderr  missing_default.rs  missing_default.stderr  no_generics.rs  no_generics.stderr  no_trait.rs  no_trait.stderr  non_item.rs  none.rs  none.stderr  option.rs  option.stderr  skip.rs  skip.stderr  (+9 more)
non-msrv-tests/tests/ui/not-zeroize/: comma.rs  comma.stderr  item.rs  item.stderr  item_option_syntax.rs  item_option_syntax.stderr  trait.stderr
non-msrv-tests/tests/ui/zeroize/: comma.rs  comma.stderr  deprecated_drop.rs  deprecated_drop.stderr  duplicate_option.rs  duplicate_option.stderr  invalid_option.rs  invalid_option.stderr  item.rs  item.stderr  item_option_syntax.stderr  trait.rs  trait.stderr  use_case.rs  use_case.stderr  wrong_option_syntax.rs  wrong_option_syntax.stderr  zeroize.rs  zeroize.stderr
src/: attr.rs  data.rs  error.rs  field.rs  impl_.rs  input.rs  item.rs  lib.rs  trait_.rs  util.rs  variant.rs
src/attr/: default.rs  field.rs  item.rs  skip.rs  variant.rs  zeroize_fqs.rs
src/data/: field.rs  fields.rs
src/test/: basic.rs  bound.rs  clone.rs  discriminant.rs  enum_.rs  incomparable.rs  misc.rs  mod.rs  partial_ord.rs  skip.rs  use_case.rs  zeroize.rs
src/trait_/: clone.rs  common_ord.rs  copy.rs  debug.rs  default.rs  deserialize.rs  eq.rs  hash.rs  ord.rs  partial_eq.rs  partial_ord.rs  serde.rs  serialize.rs  zeroize.rs  zeroize_on_drop.rs
test-crates/crate_/: Cargo.toml
test-crates/crate_/src/: lib.rs
test-crates/ensure-no-std/: Cargo.toml
test-crates/ensure-no-std/src/: lib.rs
test-crates/minimal-versions/: Cargo.toml
test-crates/minimal-versions/src/: lib.rs
tests/: bound.rs  cfg.rs  clone.rs  discriminant.rs  enum_mixed.rs  enum_struct.rs  enum_tuple.rs  hygiene.rs  incomparable.rs  misc.rs  nightly.rs  not-serde.rs  raw.rs  repr.rs  safety.rs  serde.rs  skip.rs  struct_.rs  tests.rs  tests_old.rs  tuple.rs  ui.rs  union.rs  util.rs  weird.rs  zeroize.rs
tests/skip/: debug.rs  field.rs  field_trait.rs  struct_.rs  struct_trait.rs  variant.rs  variant_trait.rs
tests/ui/: discriminant.rs  discriminant.stderr  incomparable.rs  incomparable.stderr  invalid_generic.stderr  item.rs  item.stderr  item_option_syntax.rs  item_option_syntax.stderr  item_skip.rs  item_skip.stderr  missing_comma.rs  missing_comma.stderr  no_generics.rs  no_generics.stderr  no_item_generics.rs  no_item_generics.stderr  no_trait.stderr  non_item.stderr  only_generic.rs  only_generic.stderr  option.stderr  skip.rs  skip.stderr  union.rs  union.stderr  unit_struct.rs  unit_struct.stderr  use_case.rs  use_case.stderr  wrong_comma.stderr
tests/ui/not-serde/: serde.rs  serde.stderr  support.rs  support.stderr
tests/ui/not-zeroize/: item.stderr  item_option_syntax.rs  item_option_syntax.stderr  item_skip.rs  item_skip.stderr  skip.rs  skip.stderr  support.rs  support.stderr
tests/ui/not-zeroize-on-drop/: zeroize-on-drop.rs  zeroize-on-drop.stderr
tests/ui/serde/: crate_syntax.rs  crate_syntax.stderr  serde.rs  serde.stderr
tests/ui/zeroize/: deprecated_drop.rs  deprecated_drop.stderr  item.rs  item.stderr  item_option_syntax.stderr  item_skip.rs  item_skip.stderr  skip.rs  skip.stderr  use_case.rs  use_case.stderr  zeroize.rs  zeroize.stderr
tests/ui/zeroize-on-drop/: zeroize-on-drop.rs  zeroize-on-drop.stderr
tests/util/: mod.rs
