[package]
edition = "2018"
name = "non-msrv-tests"
publish = false
version = "0.0.0"

[features]
nightly = ["derive-where/nightly"]
safe = ["derive-where/safe"]
zeroize = ["derive-where/zeroize"]

[dependencies]
derive-where = { path = ".." }

[dev-dependencies]
trybuild = { version = "1", default-features = false }
zeroize_ = { version = "1", package = "zeroize", default-features = false }
