[workspace]
resolver = "2"

[package]
edition = "2021"
name = "minimal-versions"
publish = false
rust-version = "1.57"
version = "0.0.0"

[features]
nightly = ["derive-where/nightly"]
safe = ["derive-where/safe"]
serde_ = ["derive-where/serde", "serde", "serde_derive", "syn"]
zeroize = ["derive-where/zeroize", "zeroize_"]
zeroize-on-drop = ["derive-where/zeroize-on-drop", "zeroize"]

[dependencies]
derive-where = { path = "../.." }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
# Fails to parse item in earlier versions.
serde_derive = { version = "1.0.28", optional = true }
# `serde_derive` v1.0.28 doesn't compile with earlier versions.
syn = { version = "0.12.3", default-features = false, optional = true }
zeroize_ = { package = "zeroize", version = "1.5", default-features = false, optional = true }
